[gd_scene load_steps=32 format=3 uid="uid://b2tgjxgf8yj0e"]

[ext_resource type="Texture2D" uid="uid://dwg0iigy3hru4" path="res://assets/sprites/slime.png" id="1_g7kli"]
[ext_resource type="Script" path="res://scripts/slime.gd" id="1_npl3c"]
[ext_resource type="Texture2D" uid="uid://chxvt3oyvlikd" path="res://assets/sprites/slime2.png" id="3_afe3r"]
[ext_resource type="PackedScene" uid="uid://baa0axn6bm417" path="res://scenes/hpBar.tscn" id="3_qll7w"]
[ext_resource type="Script" path="res://scripts/slime_hit_box.gd" id="4_cymi8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hedjn"]
atlas = ExtResource("3_afe3r")
region = Rect2(0, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_gi6ei"]
atlas = ExtResource("3_afe3r")
region = Rect2(20, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_2t46p"]
atlas = ExtResource("3_afe3r")
region = Rect2(40, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lu6p"]
atlas = ExtResource("3_afe3r")
region = Rect2(60, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjchr"]
atlas = ExtResource("3_afe3r")
region = Rect2(80, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6alf"]
atlas = ExtResource("3_afe3r")
region = Rect2(100, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dx64"]
atlas = ExtResource("3_afe3r")
region = Rect2(0, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_mehy8"]
atlas = ExtResource("3_afe3r")
region = Rect2(20, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdafo"]
atlas = ExtResource("3_afe3r")
region = Rect2(40, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ag6v"]
atlas = ExtResource("3_afe3r")
region = Rect2(60, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2lhe"]
atlas = ExtResource("3_afe3r")
region = Rect2(80, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_chq3l"]
atlas = ExtResource("1_g7kli")
region = Rect2(20, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_xshwg"]
atlas = ExtResource("1_g7kli")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_73w2m"]
atlas = ExtResource("1_g7kli")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk4no"]
atlas = ExtResource("1_g7kli")
region = Rect2(20, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmpp2"]
atlas = ExtResource("1_g7kli")
region = Rect2(40, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfywg"]
atlas = ExtResource("1_g7kli")
region = Rect2(0, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0p0m"]
atlas = ExtResource("1_g7kli")
region = Rect2(20, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy776"]
atlas = ExtResource("1_g7kli")
region = Rect2(40, 20, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_mdjwl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hedjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi6ei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2t46p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lu6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjchr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6alf")
}],
"loop": true,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dx64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mehy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdafo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ag6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2lhe")
}],
"loop": true,
"name": &"death2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_chq3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xshwg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_73w2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk4no")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmpp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfywg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0p0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy776")
}],
"loop": true,
"name": &"move",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_xak0t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death2"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureProgressBar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("hurtBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("hitBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_fnrdi"]
resource_name = "death"
length = 0.57
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 4, 5, 5]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.566667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("TextureProgressBar:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("hurtBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("hitBox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5lbte"]
_data = {
"RESET": SubResource("Animation_xak0t"),
"death": SubResource("Animation_fnrdi")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ogvvw"]
radius = 6.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ebih5"]
radius = 8.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n7b40"]
radius = 60.0083

[node name="slime" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 2
script = ExtResource("1_npl3c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_mdjwl")
animation = &"death2"
autoplay = "idle"
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5lbte")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_ogvvw")

[node name="hurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2(0, -8)
rotation = -1.56933
shape = SubResource("CapsuleShape2D_ebih5")

[node name="hitBox" type="Area2D" parent="." groups=["enemy_attack"]]
collision_layer = 4
collision_mask = 4
script = ExtResource("4_cymi8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2(0, -6)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_ogvvw")

[node name="playerCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerCheck"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_n7b40")

[node name="TextureProgressBar" parent="." node_paths=PackedStringArray("enemy") instance=ExtResource("3_qll7w")]
offset_top = -17.0
offset_bottom = -14.0
enemy = NodePath("..")

[node name="lineOfSight" type="RayCast2D" parent="." groups=["Enemies"]]
target_position = Vector2(0, 54)

[node name="dmgTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="respawnTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="area_entered" from="hurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="playerCheck" to="." method="_on_player_check_area_entered"]
[connection signal="area_exited" from="playerCheck" to="." method="_on_player_check_area_exited"]
[connection signal="body_entered" from="playerCheck" to="." method="_on_player_check_body_entered"]
[connection signal="body_exited" from="playerCheck" to="." method="_on_player_check_body_exited"]
[connection signal="timeout" from="dmgTimer" to="." method="_on_dmg_timer_timeout"]
[connection signal="timeout" from="respawnTimer" to="." method="_on_respawn_timer_timeout"]
